enable dropping connections for unauthroized received by nginx. Hosts are set at setting.py Authorized_hosts. also proxypass name change

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,8 +34,8 @@ http {
 
   default_type text/html;
 
-  upstream django_server {
-    ### Configuring a way for more than one server hosting the app deafult is one, but more can be set for load balancing https://docs.nginx.com/nginx/admin-guide/load-balancer/http-load-balancer/
+  upstream django-server {
+    ### Configuring a way for more than one server hosting the app default is 1, but more can be set for load balancing https://docs.nginx.com/nginx/admin-guide/load-balancer/http-load-balancer/
     server djangoapp-app:8000 fail_timeout=0;
 
     ### for UNIX domain socket setups
@@ -43,12 +43,12 @@ http {
   }
 
   ### Drop any unknown hosts
-  #server {
+  server {
     ### if no Host match, close the connection to prevent host spoofing
-    #listen 80 default_server;
-    #listen 443;
-    #return 444; # don't return response for anything, but the ports listed
-    #}
+    listen 80 default_server;
+    listen 443;
+    return 444; # don't return response for anything unless a valid host
+    }
 
   ### Redirect all incoming http requests to the same site and URI on https, using nginx - enable after certificate is installed
   #server {
@@ -62,8 +62,8 @@ http {
   ### Specific configuration of Nginx for serving the docker based ArcsSystem app
   server {
      ##### Begin Transitional Configuration ##### port opened to listen, set default
-     # listen 80 deferred; # enable if a default server is set in another server block {}
-     listen 80 default_server; # ipv4 listen # TODO remove once ssl certificate is included below
+     listen 80 deferred; # enable if a default server is set in another server block {}
+     #listen 80 default_server; # ipv4 listen only if default server
      ##### End Transitional Configuration ##### TODO Delete config section once ssl config is complete
 
 
@@ -121,7 +121,7 @@ http {
        error_page 403 /403_error.html;
      }
 
-     ### prevent image hotlinking from 3rd parties # TODO reenable after static content testing completes
+     ### prevent image hotlinking from 3rd parties # TODO reenable after domain names are used
      #location ~ .(webp|png|gif|jpe?g)$ {
        #valid_referers none blocked medborgarforskning.se; # place valid domain name. Recommend one per line for readability.
        #valid_referers none blocked *.medborgarforskning.se; # place valid subdomains. Recommend one per line for readability.
@@ -171,7 +171,7 @@ http {
        ### we don't want nginx trying to do something clever with
        ### redirects, we set the Host: header above already.
        proxy_redirect off;
-       proxy_pass http://django_server;
+       proxy_pass http://django-server;
      }
 
      ### Add securityheaders - nosniff tells browsers to strictly process mime.types as header indicates
