--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -96,7 +96,7 @@ http {
      # ssl_trusted_certificate /path/to/root_CA_cert_plus_intermediates;
 
      ### replace with the IP address of your resolver ie the nameservers
-     # resolver 127.0.0.1;
+     resolver 127.0.0.1;
 
      ### enable for letsencrypt wildcard deployment
      # include /etc/letsencrypt/options-ssl-nginx.conf; # TODO implement letsencrypt wildcard container
@@ -104,7 +104,7 @@ http {
 
      ##### Begin application configuration #####
      ### set the names that this server will handle (one per line for readability)
-     server_name localhost; # TODO disable once certificate and name setting is completed and for production
+     server_name localhost arcstest.brierjon.com; # TODO disable once certificate and name setting is completed and for production
      #server_name arcs.local; # Insert the naked domain name
      #server_name www.arcs.local; # Insert the www subdomain variant of your domain name (because people still type it manually and we want to handle this)
      #server_name *.arcs.local; # Insert a wildcard variant for a catch all other subdomains not listed.
@@ -174,8 +174,11 @@ http {
        proxy_pass http://django-server;
      }
 
-     ### Add securityheaders - nosniff tells browsers to strictly process mime.types as header indicates
+     ##### Begin adding securityheaders #####
+     ###  nosniff tells browsers to strictly process mime.types instead of guessing
      add_header X-Content-Type-Options "nosniff" always;
+
+     ##### End adding securityheaders ######
 
      #error_log /etc/nginx/error_log.log;
      #access_log /etc/nginx/access_log.log;
