cleanup server_name in nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -103,11 +103,9 @@ http {
      ##### End SSL configuration #####
 
      ##### Begin application configuration #####
-     ### set the names that this server will handle (one per line for readability)
-     server_name localhost arcstest.brierjon.com; # TODO disable once certificate and name setting is completed and for production
-     #server_name arcs.local; # Insert the naked domain name
-     #server_name www.arcs.local; # Insert the www subdomain variant of your domain name (because people still type it manually and we want to handle this)
-     #server_name *.arcs.local; # Insert a wildcard variant for a catch all other subdomains not listed.
+     ### set the valid host names that this server will handle (name1 name2 name3)
+     ### Insert the naked domain name (ie. medborgarforskning.se), www subdomain (ie www.medborgarforskning.se), wildcard subdomain (*.medborgarforskning.se)
+     server_name localhost arcstest.brierjon.com medborgarforskning.se dev.medborgarforskning.se; # TODO remove localhost once certificate and name setting is completed for dev and production
 
      charset utf-8;
      root /var/www/arcs_collected_static/; #sets the root of your files on the server
