add cross site scripting header

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -176,6 +176,10 @@ http {
      ###  nosniff tells browsers to strictly process mime.types instead of guessing
      add_header X-Content-Type-Options "nosniff" always;
 
+     # Block pages from loading when they detect reflected XSS attacks
+     add_header X-XSS-Protection: 1; mode=block
+
+
      ##### End adding securityheaders ######
 
      #error_log /etc/nginx/error_log.log;
