add content security policy report only header and fix typo in cross site script header

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -176,9 +176,14 @@ http {
      ###  nosniff tells browsers to strictly process mime.types instead of guessing
      add_header X-Content-Type-Options "nosniff" always;
 
-     # Block pages from loading when they detect reflected XSS attacks
-     add_header X-XSS-Protection: 1; mode=block
+     ### Block pages from loading when they detect reflected XSS attacks
+     add_header X-XSS-Protection "1; mode=block";
 
+     ### Content Security Policy
+     ### Reporting Only - TODO cleanup for modularity of domains and add as header in dev environment
+     add_header Content-Security-Policy-Report-Only "default-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src-elem 'self'; script-src-attr 'none'; style-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; style-src-elem 'none'; style-src-attr 'none'; img-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; font-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; connect-src 'none'; media-src 'none'; object-src 'none'; prefetch-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; frame-src 'none'; worker-src 'none'; frame-ancestors 'none'; form-action 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; upgrade-insecure-requests; block-all-mixed-content; disown-opener; sandbox; base-uri 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; manifest-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se";
+     ### Enforced Values
+     add_header Content-Security-Policy "";
 
      ##### End adding securityheaders ######
 
