--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -50,19 +50,28 @@ http {
     return 444; # don't return response for anything unless a valid host
     }
 
-  ### Redirect all incoming http requests to the same site and URI on https, using nginx - enable after certificate is installed
-  #server {
+  ### Redirect all incoming http requests to the same site and URI on https, using nginx - .well-known allows lets-encrypt to verify via a generated file
+  server {
     #listen 80 default_server; # ipv4 listening for upgrade to https redirect
     #listen [::]:80 default_server; # ipv6 listening for upgrade to https redirect
-    #
-    #return 301 https://$host$request_uri;
-  #}
+    listen 80 deferred; # ipv4 listening for upgrade to https redirect
+    listen [::]:80 deferred; # ipv6 listening for upgrade to https redirect
+
+    ### set the .well-known location for letsencrypt ACME Challege file
+    location = /.well-known/acme-challege {
+      alias /var/www/certbot;
+      #sendfile on;
+      #sendfile_max_chunk 1m;
+    }
+
+    return 301 https://$host$request_uri;
+  }
 
 
   ### Specific configuration of Nginx for serving the docker based ArcsSystem app
   server {
      ##### Begin Transitional Configuration ##### port opened to listen, set default
-     listen 80 deferred; # enable if a default server is set in another server block {}
+     listen 80 ; # enable if a default server is set in another server block {}
      #listen 80 default_server; # ipv4 listen only if default server
      ##### End Transitional Configuration ##### TODO Delete config section once ssl config is complete
 
@@ -73,8 +82,8 @@ http {
      # listen 443 ssl;
      # listen [::]:443 ssl;
 
-     # ssl_certificate /etc/letsencrypt/live/medborgarforskning/fullchain.pem; # /path/to/signed_cert_plus_intermediates
-     # ssl_certificate_key /etc/letsencrypt/live/medborgarforskning/privkey.pem; # /path/to/private_key;
+     # ssl_certificate /etc/letsencrypt/live/medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates
+     # ssl_certificate_key /etc/letsencrypt/live/medborgarforskning.se/privkey.pem; # /path/to/private_key;
 
      # ssl_session_timeout 1d;
      # ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
@@ -104,8 +113,9 @@ http {
 
      ##### Begin application configuration #####
      ### set the valid host names that this server will handle (name1 name2 name3)
-     ### Insert the naked domain name (ie. medborgarforskning.se), www subdomain (ie www.medborgarforskning.se), wildcard subdomain (*.medborgarforskning.se)
-     server_name localhost arcstest.brierjon.com medborgarforskning.se dev.medborgarforskning.se; # TODO remove localhost once certificate and name setting is completed for dev and production
+     ### Insert the naked domain name (ie. medborgarforskning.se), www subdomain (ie www.medborgarforskning.se), other subdomains. A wildcard is not supported with in ARCS certificate generating at this time (ie *.medborgarforskning.se) due to DNS provider required support and additional development needed. https://letsencrypt.org/docs/challenge-types/ # TODO verify all subdomains needed are listed.
+     server_name localhost arcstest.brierjon.com medborgarforskning.se www.medborgarforskning.se dev.medborgarforskning.se; # TODO remove localhost once certificate and name setting is completed for dev and production
+
 
      charset utf-8;
      root /var/www/arcs_collected_static/; #sets the root of your files on the server
@@ -121,8 +131,7 @@ http {
 
      ### prevent image hotlinking from 3rd parties # TODO reenable after domain names are used
      #location ~ .(webp|png|gif|jpe?g)$ {
-       #valid_referers none blocked medborgarforskning.se; # place valid domain name. Recommend one per line for readability.
-       #valid_referers none blocked *.medborgarforskning.se; # place valid subdomains. Recommend one per line for readability.
+       #valid_referers none blocked medborgarforskning.se dev.medborgarforskning.se arcstest.brierjon.com; # place valid domain name. Recommend one per line for readability.
        #if ($invalid_referer) {
        #  return   403;
        #  }
@@ -133,6 +142,13 @@ http {
        alias /var/www/arcs_collected_static/static/favicon.ico;
        sendfile on;
        sendfile_max_chunk 1m;
+     }
+
+     ### set the .well-known location for static files
+     location = /.well-known {
+       alias /var/www/arcs_collected_static/static/.well-known/;
+       #sendfile on;
+       #sendfile_max_chunk 1m;
      }
 
      ### set Nginx to handle the site design static files to offload from python app
