include missing comment on nginx docker file

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -10,7 +10,7 @@ FROM nginx
 ### remove the default config files copy the ARCS default nginx.conf
 RUN rm /etc/nginx/nginx.conf
 
-###
+### add the ARCS configured nginx.conf to the server image
 COPY nginx.conf /etc/nginx/
 
 ### copy a custom mime.types file from ARCS to docker image
