transitional https deployment status - requires manual certificate generation to boot nginx includes placeholder example - enabled logging to /log/ for nginx and letsencrypt - added security headers content security policy - added temporary security headers via nginx.conf for referrer policy - added temporary security headers via nginx.conf for feature policy

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,13 @@ dmypy.json
 # ARCS Generated Files we don't want synced
 postgresdb
 arcs_collected_static/
+ssl-dhparams.pem
+options-ssl-nginx.conf
+
+# ARCS Testing Files and Directory we don't want synced
+tempcertificates/
+live/
+test.pass
+log/letsencrypt/
+log/nginx/
+data/certbot/
