--- a/ArcsSystem.config
+++ b/ArcsSystem.config
@@ -22,6 +22,16 @@ DEVDOMAIN = default
 ## Default: admin@PRODDOMAIN
 ADMINEMAIL = default
 
+#### Set database parameters ####
+## Default Database in Docker is: PostGresSql # TODO add module to make PostGis for shapefile calculations
+# default is a generated value for POSTGRES_DB # TODO add default value generation
+# default is a generated value for POSTGRES_USER=postgres # TODO add default value generation
+# default is a generated value for POSTGRES_PASSWORD=docker # TODO add default value generation
+
+POSTGRES_DB = default
+POSTGRES_USER = default
+POSTGRES_PASSWORD = default
+
 ########## END Required Config parameters ##########
 
 
@@ -38,4 +48,4 @@ LETSENCRYPT = 1
 CUSTOMCERTPATH = default
 
 
-#### TODO FUTURE FEATURES ####
+#### TODO FUTURE FEATURES OUTLINE ####
