--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,17 +10,13 @@
 # Check SSL configuration against best practices at https://observatory.mozilla.org/
 
 # TODO implement WAF - ModSecurity with OWASP CRS see: https://github.com/SpiderLabs/ModSecurity-nginx and https://github.com/SpiderLabs/owasp-modsecurity-crs
-# TODO implement procy_caching - https://docs.nginx.com/nginx/admin-guide/content-cache/content-caching/
+# TODO implement proxy_caching - https://docs.nginx.com/nginx/admin-guide/content-cache/content-caching/
 # TODO check header config for security - https://securityheaders.com/
 
 ### Documentation: https://nginx.org/en/docs/ngx_core_module.html#worker_processes
 worker_processes 1; #Default value is "worker_processes 1;", but try auto or the to number of cpus to start
 
 user nobody nogroup;
-
-### set the level of logging - [ debug | info | notice | warn | error | crit ]
-# error_log  /var/log/nginx/error.log warn;
-# access_log /var/log/nginx/access.log main;
 
 pid /var/run/nginx.pid;
 
@@ -46,16 +42,16 @@ http {
   server {
     ### if no Host match, close the connection to prevent host spoofing
     listen 80 default_server;
-    listen 443;
+    listen [::]:80 default_server;
     return 444; # don't return response for anything unless a valid host
     }
 
   ### Redirect all incoming http requests to the same site and URI on https, using nginx - .well-known allows lets-encrypt to verify via a generated file
   server {
-    #listen 80 default_server; # ipv4 listening for upgrade to https redirect
-    #listen [::]:80 default_server; # ipv6 listening for upgrade to https redirect
     listen 80 deferred; # ipv4 listening for upgrade to https redirect
     listen [::]:80 deferred; # ipv6 listening for upgrade to https redirect
+
+    server_name arcstest.brierjon.com medborgarforskning.se www.medborgarforskning.se dev.medborgarforskning.se;
 
     ### set the .well-known location for letsencrypt ACME Challege file
     location = /.well-known/acme-challege {
@@ -70,32 +66,46 @@ http {
 
   ### Specific configuration of Nginx for serving the docker based ArcsSystem app
   server {
-     ##### Begin Transitional Configuration ##### port opened to listen, set default
-     listen 80 ; # enable if a default server is set in another server block {}
-     #listen 80 default_server; # ipv4 listen only if default server
-     ##### End Transitional Configuration ##### TODO Delete config section once ssl config is complete
+     ### set the level of error logging - [ debug | info | notice | warn | error | crit | alert | emerg]
+     error_log  /var/log/nginx/error.log warn;
 
+     ### set access logging
+     access_log /var/log/nginx/access.log combined;
 
      ##### Begin SSL configuration ##### enable this block after server has an ssl certificate
      ## listen 443 ssl http2; # TODO only enable after django supports http2 until then use without "http2"
      ## listen [::]:443 ssl http2; # TODO only enable after django supports http2 until then use without "http2"
-     # listen 443 ssl;
-     # listen [::]:443 ssl;
+     listen 443 ssl;
+     listen [::]:443 ssl;
 
-     # ssl_certificate /etc/letsencrypt/live/medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates
-     # ssl_certificate_key /etc/letsencrypt/live/medborgarforskning.se/privkey.pem; # /path/to/private_key;
+     #ssl_certificate     /etc/letsencrypt/live/medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for naked domain
+     #ssl_certificate_key /etc/letsencrypt/live/medborgarforskning.se/privkey.pem; # /path/to/private_key for naked domain
+     #ssl_certificate     /etc/letsencrypt/live/www.medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for www subdomain
+     #ssl_certificate_key /etc/letsencrypt/live/www.medborgarforskning.se/privkey.pem; # /path/to/private_key for www subdomain
+     #ssl_certificate     /etc/letsencrypt/live/dev.medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for dev subdomain
+     #ssl_certificate_key /etc/letsencrypt/live/dev.medborgarforskning.se/privkey.pem; # /path/to/private_key for dev subdomain
 
-     # ssl_session_timeout 1d;
-     # ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
-     # ssl_session_tickets off;
+     ### BEGIN Dev-Test manual transitional certificates - TODO remove this block befor release ###
+     ssl_password_file /etc/letsencrypt/test.pass;
+     #ssl_certificate /etc/letsencrypt/live/dev.medborgarforskning.se/cert.pem; # /path/to/signed_cert_plus_intermediates for dev subdomain
+     #ssl_certificate_key /etc/letsencrypt/live/dev.medborgarforskning.se/privkey.pem; # /path/to/private_key for dev subdomain
+     ssl_certificate /etc/letsencrypt/live/arcstest.brierjon.com/cert.pem; # /path/to/signed_cert_plus_intermediates for alternative dev subdomain
+     ssl_certificate_key /etc/letsencrypt/live/arcstest.brierjon.com/key.pem; # /path/to/private_key for alternative dev subdomain
+     ### END Dev-Test manual transitional certificates
+
+     ssl_session_timeout 1d;
+     ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
+     ssl_session_tickets off;
 
      ### modern configuration
-     # ssl_protocols TLSv1.2 TLSv1.3;
-     # ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-     # ssl_prefer_server_ciphers on; # modern suggests off if you only use TLSv1.3
+     ssl_protocols TLSv1.2 TLSv1.3;
+     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+     ssl_prefer_server_ciphers on; # modern suggests off if you only use TLSv1.3
 
-     ### HSTS (ngx_http_headers_module is required) (63072000 seconds)
-     # add_header Strict-Transport-Security "max-age=63072000" always; #
+     ### HSTS (ngx_http_headers_module is required) (63072000 seconds is recommended for production)
+     ## enable for inclusion of your domain in browsers to only use https - opt-in by enabling the preload version of the header below
+     # add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always; preload;
+     add_header Strict-Transport-Security "max-age=30; includeSubDomains" always;
 
      ### OCSP stapling
      # ssl_stapling on;
@@ -114,7 +124,7 @@ http {
      ##### Begin application configuration #####
      ### set the valid host names that this server will handle (name1 name2 name3)
      ### Insert the naked domain name (ie. medborgarforskning.se), www subdomain (ie www.medborgarforskning.se), other subdomains. A wildcard is not supported with in ARCS certificate generating at this time (ie *.medborgarforskning.se) due to DNS provider required support and additional development needed. https://letsencrypt.org/docs/challenge-types/ # TODO verify all subdomains needed are listed.
-     server_name localhost arcstest.brierjon.com medborgarforskning.se www.medborgarforskning.se dev.medborgarforskning.se; # TODO remove localhost once certificate and name setting is completed for dev and production
+     server_name arcstest.brierjon.com medborgarforskning.se www.medborgarforskning.se dev.medborgarforskning.se;
 
 
      charset utf-8;
@@ -188,7 +198,7 @@ http {
        proxy_pass http://django-server;
      }
 
-     ##### Begin adding securityheaders #####
+     ##### BEGIN adding securityheaders #####
      ###  nosniff tells browsers to strictly process mime.types instead of guessing
      add_header X-Content-Type-Options "nosniff" always;
 
@@ -197,11 +207,18 @@ http {
 
      ### Content Security Policy
      ### Reporting Only - TODO cleanup for modularity of domains and add as header in dev environment
-     add_header Content-Security-Policy-Report-Only "default-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src-elem 'self'; script-src-attr 'none'; style-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; style-src-elem 'none'; style-src-attr 'none'; img-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; font-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; connect-src 'none'; media-src 'none'; object-src 'none'; prefetch-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; frame-src 'none'; worker-src 'none'; frame-ancestors 'none'; form-action 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; upgrade-insecure-requests; block-all-mixed-content; disown-opener; sandbox; base-uri 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; manifest-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se";
+     add_header Content-Security-Policy-Report-Only "default-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src-elem 'self'; script-src-attr 'none'; style-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; style-src-elem 'none'; style-src-attr 'none'; img-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; font-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; connect-src 'none'; media-src 'none'; object-src 'none'; prefetch-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; frame-src 'none'; worker-src 'none'; frame-ancestors 'none'; form-action 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; upgrade-insecure-requests; block-all-mixed-content; sandbox; base-uri 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; manifest-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se";
      ### Enforced Values
-     add_header Content-Security-Policy "";
+     add_header Content-Security-Policy "default-src https";
 
-     ##### End adding securityheaders ######
+     ### Dev Default Behavior for referals
+     ## TODO adding for now at server level, but will move to application level for finer level of control per content
+     add_header Referrer-Policy "no-referrer-when-downgrade";
+
+     ### Dev Default Behavior for Feature Policy - restriction of objects still moving  #TODO move to application level for page specific control of access_log
+     add_header Feature-Policy "geolocation 'self'; midi 'none'; notifications 'none'; sync-xhr 'none'; push 'none'; microphone 'none'; camera 'none'; magnetometer 'none'; gyroscope 'none'; speaker 'none'; vibrate 'none'; fullscreen 'none'; payment 'none';";
+
+     ##### END adding securityheaders ######
 
      #error_log /etc/nginx/error_log.log;
      #access_log /etc/nginx/access_log.log;
