-set default root robots.txt -configured content security policy,but left reporting on to console needs reporting URL or disabled

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,6 +20,9 @@ user nobody nogroup;
 
 pid /var/run/nginx.pid;
 
+### TODO uncomment to enable WAF ModSecurity ###
+# load_module modules/ngx_http_modsecurity_module.so;
+
 events {
   worker_connections 1024; # increase if you have lots of clients
   accept_mutex off; # set to 'on' if nginx worker_processes > 1
@@ -78,12 +81,14 @@ http {
      listen 443 ssl;
      listen [::]:443 ssl;
 
+     ##### TODO Move to include and generate the include from ArcsSystem.config domains #####
      #ssl_certificate     /etc/letsencrypt/live/medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for naked domain
      #ssl_certificate_key /etc/letsencrypt/live/medborgarforskning.se/privkey.pem; # /path/to/private_key for naked domain
      #ssl_certificate     /etc/letsencrypt/live/www.medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for www subdomain
      #ssl_certificate_key /etc/letsencrypt/live/www.medborgarforskning.se/privkey.pem; # /path/to/private_key for www subdomain
      #ssl_certificate     /etc/letsencrypt/live/dev.medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for dev subdomain
      #ssl_certificate_key /etc/letsencrypt/live/dev.medborgarforskning.se/privkey.pem; # /path/to/private_key for dev subdomain
+     ##### END TODO Move to include #####
 
      ### BEGIN Dev-Test manual transitional certificates - TODO remove this block befor release ###
      ssl_password_file /etc/letsencrypt/test.pass;
@@ -117,13 +122,13 @@ http {
      ### replace with the IP address of your resolver ie the nameservers
      resolver 127.0.0.1;
 
-     ### enable for letsencrypt wildcard deployment
+     ### enable for letsencrypt wildcard deployment TODO DNS configuration needs to be implemented
      # include /etc/letsencrypt/options-ssl-nginx.conf; # TODO implement letsencrypt wildcard container
      ##### End SSL configuration #####
 
      ##### Begin application configuration #####
      ### set the valid host names that this server will handle (name1 name2 name3)
-     ### Insert the naked domain name (ie. medborgarforskning.se), www subdomain (ie www.medborgarforskning.se), other subdomains. A wildcard is not supported with in ARCS certificate generating at this time (ie *.medborgarforskning.se) due to DNS provider required support and additional development needed. https://letsencrypt.org/docs/challenge-types/ # TODO verify all subdomains needed are listed.
+     ### Insert the naked domain name (ie. medborgarforskning.se), www subdomain (ie www.medborgarforskning.se), other subdomains. A wildcard is not supported with by ARCS automatic certificate generation at this time (ie *.medborgarforskning.se) due to DNS provider support being required and additional development needed. https://letsencrypt.org/docs/challenge-types/ # TODO verify all subdomains needed are listed.
      server_name arcstest.brierjon.com medborgarforskning.se www.medborgarforskning.se dev.medborgarforskning.se;
 
 
@@ -150,6 +155,13 @@ http {
      ### set favicon location regardless if included in template
      location = /favicon.ico {
        alias /var/www/arcs_collected_static/static/favicon.ico;
+       sendfile on;
+       sendfile_max_chunk 1m;
+     }
+
+     ### set default robots.txt root location regardless if included in header response only handles primary domain not subdomains
+     location = /robots.txt {
+       alias /var/www/arcs_collected_static/static/robots.txt;
        sendfile on;
        sendfile_max_chunk 1m;
      }
@@ -207,9 +219,9 @@ http {
 
      ### Content Security Policy
      ### Reporting Only - TODO cleanup for modularity of domains and add as header in dev environment
-     add_header Content-Security-Policy-Report-Only "default-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src-elem 'self'; script-src-attr 'none'; style-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; style-src-elem 'none'; style-src-attr 'none'; img-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; font-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; connect-src 'none'; media-src 'none'; object-src 'none'; prefetch-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; frame-src 'none'; worker-src 'none'; frame-ancestors 'none'; form-action 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; upgrade-insecure-requests; block-all-mixed-content; sandbox; base-uri 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; manifest-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se";
-     ### Enforced Values
-     add_header Content-Security-Policy "default-src https";
+     add_header Content-Security-Policy-Report-Only "default-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src-elem 'self' code.jquery.com cdn.jsdelivr.net stackpath.bootstrapcdn.com; script-src-attr 'none'; style-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com; style-src-elem 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com fonts.googleapis.com stackpath.bootstrapcdn.com; style-src-attr 'none'; img-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; font-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se fonts.googleapis.com fonts.gstatic.com; connect-src 'none'; media-src 'none'; object-src 'none'; prefetch-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; frame-src 'none'; worker-src 'none'; frame-ancestors 'none'; form-action 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; block-all-mixed-content; sandbox; base-uri 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; manifest-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se";
+     ### Enforced Content Security Policy Values
+     add_header Content-Security-Policy "upgrade-insecure-requests; default-src https testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com cdn.jsdelivr.net code.jquery.com; script-src-elem 'self' code.jquery.com cdn.jsdelivr.net stackpath.bootstrapcdn.com; style-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com; img-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; font-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se fonts.googleapis.com fonts.gstatic.com; style-src-elem 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se cdn.jsdelivr.net code.jquery.com fonts.googleapis.com stackpath.bootstrapcdn.com";
 
      ### Dev Default Behavior for referals
      ## TODO adding for now at server level, but will move to application level for finer level of control per content
